uptime-kuma/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: monitoring
  labels:
    app: uptime-kuma
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30001
      name: http
  selector:
    app: uptime-kuma
